clusters/talos-robbinsdale/apps/tailscale/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tailscale
  labels:
    pod-security.kubernetes.io/enforce: privileged
    argocd.argoproj.io/sync-options: Prune=false
