clusters/talos-robbinsdale/apps/tailscale/tailscale-ds.yaml
# EXAMPLE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subnet-router
  labels:
    app: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      # this is to force the pod to run in host netNS
      hostNetwork: true 
      containers:
      - name: tailscale
        imagePullPolicy: Always
        image: "ghcr.io/tailscale/tailscale:latest"
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
