clusters/talos-robbinsdale/apps/tailscale/egress.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: robbinsdale.taila31de.ts.net
  name: tailscale-robbinsdale
  namespace: home
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: tailscale
  labels:
    app: tailscale
spec:
  selector:
    tailscale.com/parent-resource: tailscale-robbinsdale
    tailscale.com/parent-resource-ns: home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld
  namespace: tailscale
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "helloworld.rajsingh.info"
    - "helloworld.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: helloworld
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
