clusters/talos-robbinsdale/apps/tailscale/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: tailscale-hubble
#   namespace: hubble-ui
# spec:
#   defaultBackend:
#     service:
#       name: hubble-ui
#       port:
#         number: 80
#   ingressClassName: tailscale
#   tls:
#     - hosts:
#         - hubble
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: hubble-ui
  annotations:
    cert-manager.io/cluster-issuer: raj-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  # defaultBackend:
  #   service:
  #     name: hubble-ui
  #     port:
  #       number: 80
  rules:
  - host: tailscale.hubble.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  ingressClassName: ngnix
  tls:
    - secretName: tailscale-hubble-rajsingh-tls
      hosts:
        - tailscale.hubble.rajsingh.info
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     tailscale.com/tailnet-fqdn: tailscale.taila31de.ts.net
#   name:    # service name
# spec:
#   externalName: placeholder   # any value - will be overwritten by operator
#   type: ExternalName
