clusters/talos-robbinsdale/apps/tailscale/recording.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tailscale
  namespace: tailscale
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "tailscale.rajsingh.info"
    - "tailscale.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tailscale
          port: 9696
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
